<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Tracer!</string>
    <string name="app_name">Tracer</string>
    <string name="fillInDataButtonText">Fill In Data</string>
    <string name="uploadButtonText">Upload</string>
    <string name="nameTextFieldText">Name</string>
    <string name="yearTextFieldText">Year</string>
    <string name="groupTextFieldText">Group</string>
    <string name="okButtonText">OK</string>
    <string name="facebookURLTextFieldText">Facebook URL</string>
    <string name="bluetoothTracerServiceNotification">BTService</string>
    <string name="bluetoothTracerServiceStopped">Stopped</string>
    <string name="bluetoothTracerServiceStarted">Started</string>
    <string name="exitButtonText">Exit</string>
</resources>
