<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <EditText android:id="@+id/nameTextField" android:text="@string/nameTextFieldText" android:layout_gravity="center_horizontal" android:layout_height="48dp" android:layout_width="175dp">
        <requestFocus></requestFocus>
    </EditText>
    <EditText android:inputType="number" android:id="@+id/yearTextField" android:text="@string/yearTextFieldText" android:layout_gravity="center_horizontal" android:layout_height="48dp" android:layout_width="175dp"></EditText>
    <EditText android:id="@+id/groupTextField" android:text="@string/groupTextFieldText" android:layout_gravity="center_horizontal" android:layout_height="48dp" android:layout_width="175dp"></EditText>
    <EditText android:layout_width="175dp" android:layout_gravity="center_horizontal" android:text="@string/facebookURLTextFieldText" android:id="@+id/facebookURLTextField" android:layout_height="48dp"></EditText>
    <Button android:id="@+id/okButton" android:layout_width="175dp" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:text="@string/okButtonText"></Button>
    
</LinearLayout>
